# windows-audio-control

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml
.github/: check-version.py
.github/workflows/: ci.yml
python/windows_audio_control/: _native.pyi
python/windows_audio_events/: __init__.py  _native.pyi
src/: collection.rs  com.rs  comapi.rs  device.rs  enums.rs  errors.rs  gen_typestub.py  lib.rs  policy_config.rs
tests/: test_collection.py
