[package]
name = "windows-audio-events"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
python-source = "python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "windows_audio_events"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.17", features = ["async-std-runtime"] }
pyo3-log = "0.7"
async-std = "1.12"
log = "0.4"

[dependencies.windows]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Devices_FunctionDiscovery",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Search_Common",
  "implement",
  "interface",
]
